test/semantic_errors/invalid_main_def2.mc
int global1;
int test(bool b, int c) {
    return 10 + b;
}

int main(int a) {
    bool b;
    b = false;
    int a[];
    return a;
}